packages/build/tests/error/fixtures/plugin_error_to_json/plugin.js
export default {
  onPreBuild({
    utils: {
      build: { failBuild },
    },
  }) {
    const error = new Error('test')
    error.toJSON = () => ({})
    failBuild('message', { error })
  },
}
